todo-and-other/todo-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
spec:
  selector:
    matchLabels:
      app: todo
  replicas: 1
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
      - name: data
        emptyDir: {}

      containers:
      - name: redis
        image:  redis
        command:
          - redis-server
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /data/redis
          name: data

      - name: todo
        image:  natawut/todo-service:release-2.1
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /root/todo/data
          name: data
